# traxat

./: .gitignore  Cargo.toml  LICENSE  README.org  deploy.sh  traxat.service
.github/workflows/: rust.yml  software.yml
hardware/: Base.stl  Carriage.stl  Lid.stl  Platform.stl  Pointer.stl
software/: Cargo.toml  deploy.sh  manual_testing.sh
software/src/: main.rs  message.rs  rotator.rs
src/: cli.rs  handler.rs  main.rs  message.rs  movement.rs  rotator.rs  sqlite.rs
