[package]
name = "automated-satellite-tracker"
version = "0.1.0"
authors = ["Daniil Rose <daniil.rose@member.fsf.org>", "Quub, LLC <info@quub.space>"]
description = "Program to enable az/el control of the Quub tabletop satellite tracker."
edition = "2021"
homepage = "https://github.com/quubspace/automated-satellite-tracker"
repository = "https://github.com/quubspace/automated-satellite-tracker"
license = "BSD 3"
keywords = ["robotics", "embedded"]
categories = ["embedded"]
readme = "README.org"

[dependencies]
anyhow = "1"
rppal = "0.13.1"
tokio = { version = "1", features = ["full"] }
