[package]
name = "traxat"
version = "0.1.0"
authors = ["Daniil Rose <daniil.rose@posteo.org>", "Quub, LLC <info@quub.space>"]
description = "Program to control the Traxat tabletop satellite tracker."
edition = "2021"
homepage = "https://github.com/quubspace/traxat"
repository = "https://github.com/quubspace/traxat"
license = "BSD 3"
keywords = ["robotics", "embedded"]
categories = ["embedded"]
readme = "README.org"

[dependencies]
log = { version = "0.4" }
fern = { version = "0.5", features = ["colored"] }
chrono = { version = "0.4" }
anyhow = { version = "1" }
rppal = { version = "0.13" }

[[bin]]
name = "traxat"
path = "src/main.rs"
